# LexonArchiveBuilder

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md  REPLAY_JOURNAL_REDESIGN_NOTES.md  docker-compose.yml  test.ps1
.github/skills/evolve/: SKILL.md
.github/skills/maintain/: SKILL.md
.github/workflows/: ci.yml  publish-images.yml  run-embedding-refresh.yml  run-indexing-experiment.yml
crates/lexonarchivebuilder-archive-sync/: Cargo.toml
crates/lexonarchivebuilder-archive-sync/src/: lib.rs  snapshot.rs
crates/lexonarchivebuilder-block-gateway/: Cargo.toml  Dockerfile
crates/lexonarchivebuilder-block-gateway/src/: lib.rs  main.rs
crates/lexonarchivebuilder-block-store-http3/: Cargo.toml
crates/lexonarchivebuilder-block-store-http3/src/: lib.rs
crates/lexonarchivebuilder-indexer/: Cargo.toml  Dockerfile  Dockerfile.scale-test
crates/lexonarchivebuilder-indexer/src/: block_copy.rs  block_store.rs  config.rs  custom_blocks.rs  embedding.rs  lib.rs  mailbox.rs  main.rs  paths.rs  quality.rs  resolver.rs  runtime.rs  search.rs  tree_tools.rs
crates/lexonarchivebuilder-mcp/: Cargo.toml  Dockerfile
crates/lexonarchivebuilder-mcp/src/: config.rs  lib.rs  main.rs  runtime.rs  server.rs
crates/lexonfabric-indexer/src/: block_store.rs  config.rs  embedding.rs  lib.rs  mailbox.rs  runtime.rs
docs/specs/lexonarchivebuilder-archive-sync/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-block-gateway/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-block-store-http3/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-deployment/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-experiment-workflow/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-image-publishing/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-indexer/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-mcp/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-scale-test/: design.md  requirements.md  validation.md
docs/specs/lexonfabric-indexer/: design.md  requirements.md  validation.md
docs/specs/lexonfabric-mcp/: design.md  requirements.md  validation.md
docs/specs/rust-workspace-ci/: design.md  requirements.md  validation.md
examples/local/: request.sample.json
examples/local/scale-test/manifests/: ietf-mailing-lists.sample.json
hooks/: check-spdx-headers  pre-commit
infra/azure/experiments/: embedding-refresh-bootstrap.sh  indexing-experiment-bootstrap.sh  main.bicep  network.bicep  render-workload-storage-env.py  storage.bicep  vm-runner.bicep
infra/azure/mvp/: cdn.bicep  keyvault.bicep  main.bicep  main.parameters.example.json  network.bicep  storage.bicep  validate-package.ps1  vm-embedder.bicep  vm-indexer.bicep
scripts/: lexonarchivebuilder-embedding-refresh.sh  lexonarchivebuilder-hosted-experiment-common.sh  lexonarchivebuilder-hosted-workflow-common.sh  lexonarchivebuilder-hosted-workflow-preflight.sh  lexonarchivebuilder-indexing-experiment.sh  lexonarchivebuilder-render-shell-env.py  lexonarchivebuilder-run-hosted-workflow-local.sh  lexonarchivebuilder-scale-test-compose-smoke.sh  lexonarchivebuilder-scale-test-smoke.sh  lexonarchivebuilder-scale-test.sh  lexonarchivebuilder-write-deployment-parameters.py
