# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonArchiveBuilder contributors

[workspace]
members = [
    "crates/lexonarchivebuilder-archive-sync",
    "crates/lexonarchivebuilder-indexer",
    "crates/lexonarchivebuilder-mcp",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
ciborium = "0.2.2"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3"
half = "2.7.1"
num_cpus = "1.17.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

lexonarchivebuilder-indexer = { path = "crates/lexonarchivebuilder-indexer" }
lexongraph-block = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-block" }
lexongraph-block-store = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-block-store" }
lexongraph-block-store-azure-sdk = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-block-store-azure-sdk" }
lexongraph-block-store-fs = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-block-store-fs" }
lexongraph-block-store-memory = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-block-store-memory" }
lexongraph-block-store-overlay = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-block-store-overlay" }
lexongraph-embeddings-trait = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-embeddings-trait" }
lexongraph-search = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-search" }
lexongraph-streaming-indexer = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "5bc66124ebf4c1472a7f7a6873c2bcbad2dcd8b1", package = "lexongraph-streaming-indexer" }
