# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonArchiveBuilder contributors

[workspace]
members = [
    "crates/lexonarchivebuilder-archive-sync",
    "crates/lexonarchivebuilder-block-gateway",
    "crates/lexonarchivebuilder-block-store-http3",
    "crates/lexonarchivebuilder-indexer",
    "crates/lexonarchivebuilder-mcp",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.9"
bytes = "1.10.1"
ciborium = "0.2.2"
clap = { version = "4.5.53", features = ["derive", "env"] }
env_logger = "0.11.11"
futures = "0.3"
h3 = "0.0.8"
h3-axum = "0.2.0"
h3-quinn = "0.0.10"
half = "2.7.1"
num_cpus = "1.17.0"
quinn = { version = "0.11.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-io"] }
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

lexonarchivebuilder-block-store-http3 = { path = "crates/lexonarchivebuilder-block-store-http3" }
lexonarchivebuilder-indexer = { path = "crates/lexonarchivebuilder-indexer" }
lexongraph-block = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-block" }
lexongraph-block-store = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-block-store" }
lexongraph-block-store-azure-sdk = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-block-store-azure-sdk" }
lexongraph-block-store-azure-table-v2 = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-block-store-azure-table-v2" }
lexongraph-block-store-fs = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-block-store-fs" }
lexongraph-block-store-memory = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-block-store-memory" }
lexongraph-block-store-overlay = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-block-store-overlay" }
lexongraph-embeddings-trait = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-embeddings-trait" }
lexongraph-search = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-search" }
lexongraph-streaming-indexer = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "d27bc1cec61f9d8f04f58743913b4be949a95d54", package = "lexongraph-streaming-indexer" }
