# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonArchiveBuilder contributors

[package]
name = "lexonarchivebuilder-archive-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lexongraph-block.workspace = true
lexongraph-block-store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
lexongraph-block-store-fs.workspace = true
