# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonArchiveBuilder contributors

[package]
name = "lexonarchivebuilder-block-store-http3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes = "1.10.1"
h3.workspace = true
lexongraph-block.workspace = true
lexongraph-block-store.workspace = true
quinn.workspace = true
rustls.workspace = true
tokio.workspace = true

h3-quinn = "0.0.10"
http = "1.3.1"
rustls-native-certs = "0.8.2"
