# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonArchiveBuilder contributors

[package]
name = "lexonarchivebuilder-block-store-http3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
h3.workspace = true
h3-quinn.workspace = true
lexongraph-block.workspace = true
lexongraph-block-store.workspace = true
quinn.workspace = true
rustls.workspace = true
tokio.workspace = true

http = "1.3.1"
rustls-native-certs = "0.8.2"
