# SPDX-License-Identifier: MIT
# Copyright (c) 2026 LexonArchiveBuilder contributors

[package]
name = "lexonarchivebuilder-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ciborium.workspace = true
clap.workspace = true
half.workspace = true
lexongraph-block.workspace = true
lexongraph-block-store.workspace = true
lexongraph-block-store-azure-sdk.workspace = true
lexongraph-block-store-fs.workspace = true
lexongraph-block-store-memory.workspace = true
lexongraph-block-store-overlay.workspace = true
lexongraph-embeddings-trait.workspace = true
lexongraph-search.workspace = true
lexongraph-streaming-indexer.workspace = true
mailparse = "0.16.1"
num_cpus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
futures.workspace = true
lexongraph-embeddings-trait = { workspace = true, features = ["conformance"] }
lexongraph-streaming-indexer = { workspace = true, features = ["conformance"] }
tempfile.workspace = true
tokio.workspace = true
